Fix spacing on action buttons

--- a/src/scss/cs/icons.scss
+++ b/src/scss/cs/icons.scss
@@ -48,16 +48,17 @@
   margin-bottom: -7px; 
 }
 
+.icon-share {
+  @include svg-icon('/assets/cs/icons/share.svg', 20px, 20px, 100%);
+  margin-left: -1px;
+}
+
 .icon-print {
-  @include svg-icon('/assets/cs/icons/print.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
+  @include svg-icon('/assets/cs/icons/print.svg', 20px, 20px, 100%);
 }
 
 .icon-flag {
-  @include svg-icon('/assets/cs/icons/flag.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
-}
-
-.icon-share {
-  @include svg-icon('/assets/cs/icons/share.svg', var(--icon-size), var(--icon-size), var(--mask-size, 60%));
+  @include svg-icon('/assets/cs/icons/flag.svg', 18px, 18px, 100%);
 }
 
 .icon-undo {
