--- a/src/scss/phy/forms.scss
+++ b/src/scss/phy/forms.scss
@@ -47,7 +47,7 @@
 
 [type='search'].search--filter-input {
   border: 1px solid $color-neutral-300;
-  background: $color-neutral-white url(/assets/cs/icons/search-jet.svg) no-repeat 95%;
+  background: $color-neutral-white url(/assets/cs/icons/search.svg) no-repeat 95%;
   background-size: 20px;
 }
 
